[package]
name = "splist-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
serde = { version = "1.0.209", features = ["derive"] }
serialport = "4.5.0"

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "apt-get install libudev1 libudev-dev --yes"
]
