[package]
name = "splist-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
serde = { version = "1.0.209", features = ["derive"] }
serialport = "4.5.0"

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "SYSROOT=/build/root",
    "export PKG_CONFIG_DIR=",
    "export PKG_CONFIG_LIBDIR=${SYSROOT}/usr/lib/pkgconfig:${SYSROOT}/usr/share/pkgconfig",
    "export PKG_CONFIG_SYSROOT_DIR=${SYSROOT}",
    "export PKG_CONFIG_ALLOW_CROSS=1",
    "apt-get install libudev1 libudev-dev --yes",
]
